--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,23 @@
         <maven.compiler.target>22</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <!--
+         https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+        -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.16</version>
+        </dependency>
+        <!--
+         https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
+        -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.11</version>
+        </dependency>
+    </dependencies>
 
 </project>
